[package]
name = "ddemo-rust-lettre-async-tokio1-native-tls"
version = "0.1.0"
edition = "2024"

[dependencies]
lettre = { version = "0.11", default-features = false, features = [
    "builder",
    "hostname",
    "smtp-transport",
    "tokio1",
    "tokio1-native-tls",
]}
tokio = { version = "1", features = ["full"] }
